# career-conversations-ai

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
app/: dependencies.py  main.py
app/agents/: me_agent.py
app/api/: chat_routes.py
app/cli/: index.py
app/config/: settings.py
app/core/: exception_handlers.py  exceptions.py  health.py  logging.py
app/infrastructure/: openai_client.py  pushover.py  qdrant_client.py  redis_client.py
app/knowledge/: loader.py
app/schemas/: chat_schema.py  error_schema.py
app/services/: chunking.py  embeddings.py  factory.py  history_store.py  rag.py  retriever.py  session.py  vector_store.py
app/tools/: notifications.py
app/ui/: gradio_app.py
